personal .env.development

--- a/.env.development
+++ b/.env.development
@@ -16,3 +16,5 @@ SUPPRESS_DFE_ANALYTICS_INIT=true
 
 HMRC_API_BASE_URL=https://test-api.service.hmrc.gov.uk
 HMRC_API_BANK_VALIDATION_ENABLED=true
+
+DATABASE_URL=postgresql://gtrp:gtrp@localhost:5432/claims_${RAILS_ENV}
